--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-  Welkom op onze website yayy!!!!
+
+ <header><h1>Welkom op onze website yayy!!!!</h1></header>
 </body>
 
 </html>
