--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 <body>
 
  <header><h1>Welkom op onze website yayy!!!!</h1></header>
+ <nav></nav>
+ <article></article>
+ <article></article>
+ <article></article>
+ <article></article>
+ <article></article>
+ <article></article>
+
 </body>
 
 </html>
