--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
  <header><h1>Welkom op onze website yayy!!!!</h1></header>
  <nav></nav>
- <article></article>
+ <article> <img </article>
  <article></article>
  <article></article>
  <article></article>
