--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <img
     src="https://images0.persgroep.net/rcs/ffIEYVsK_FwgglGJYfMn-m5UuYk/diocontent/63690664/_crop/1/35/899/508/_fitwidth/763?appId=93a17a8fd81db0de025c8abd1cca1279&quality=0.8"
     alt=" Afbeelding van Titan supercomputer"> </article>
- <article></article>
+ <article class="samenvatting_homepage"> </article>
  <article></article>
  <article></article>
  <article></article>
