--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  <article></article>
  <article></article>
  <article></article>
- <article></article>
+ <article>Dit is een teskt van GEES</article>
 
 </body>
 
