--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -18,7 +18,7 @@
     alt=" Afbeelding van Titan supercomputer"> </article>
  <article class="samenvatting_homepage"> </article>
  <article class="koptitel"></article>
- <article></article>
+ <article class="kop_samenvatting"></article>
  <article></article>
  <article>Dit is een teskt van GEES</article>
 
