--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  <article class="koptitel"></article>
  <article class="kop_samenvatting"></article>
  <article></article>
- <article>Dit is een teskt van GEES</article>
+ <article></article>
 
 </body>
 
