--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
  <article class="samenvatting_homepage"> </article>
  <article class="koptitel"></article>
  <article class="kop_samenvatting"></article>
- <article></article>
- <article></article>
+ <article class="plaatjes_klein"></article>
+ <article class="plaatjes_klein"></article>
+ <article class="plaatjes_klein"></article>
 
 </body>
 
