--- a/index.html
+++ b/index.html
@@ -16,12 +16,18 @@
   <img
     src="https://images0.persgroep.net/rcs/ffIEYVsK_FwgglGJYfMn-m5UuYk/diocontent/63690664/_crop/1/35/899/508/_fitwidth/763?appId=93a17a8fd81db0de025c8abd1cca1279&quality=0.8"
     alt=" Afbeelding van Titan supercomputer"> </article>
- <article class="samenvatting_homepage"> </article>
+ <article class="samenvatting_homepage">  </article>
  <article class="koptitel"></article>
  <article class="kop_samenvatting"></article>
- <article class="plaatjes_klein"></article>
- <article class="plaatjes_klein"></article>
- <article class="plaatjes_klein"></article>
+ <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+ <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+ <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
 
 </body>
 
