--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
   alt=" Afbeelding van koe"></article>
 
+ <nav class="deelkopje_nav">
+  <a href=""
+ </nav>
+ <nav class="deelkopje_nav"></nav>
+ <nav class="deelkopje_nav"></nav>
+
 </body>
 
 </html>
