--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
  <header><h1>Welkom op onze website yayy!!!!</h1></header>
- <nav></nav>
+ <nav class="inhoudsopgave"></nav>
  <article id="bigimage"> 
   <img
     src="https://photos.demandstudios.com/getty/article/152/213/484171235.jpg"
