--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   alt=" Afbeelding van koe"></article>
 
  <nav class="deelkopje_nav">
-  <a href=""></a>
+  <a href="digitale veiligheid/digitaleveiligheid.html"></a>
  </nav>
  <nav class="deelkopje_nav"></nav>
  <nav class="deelkopje_nav"></nav>
