--- a/digitale veiligheid/digitaleveiligheid.html
+++ b/digitale veiligheid/digitaleveiligheid.html
@@ -1,7 +1,9 @@
 <html>
 
 <head>
-    
+
+    <title>Digitale veiligheid</title>
+
     <link href="style.css" rel="stylesheet" type="text/css" />
 
 </head>
