--- a/digitale veiligheid/digitaleveiligheid.html
+++ b/digitale veiligheid/digitaleveiligheid.html
@@ -12,7 +12,18 @@
 
     <header></header>
 
-    
+    <article id="bigimage"> 
+        <img
+          src="https://photos.demandstudios.com/getty/article/152/213/484171235.jpg"
+          alt=" eend"> </article>
+
+<article></article>
+
+<article></article>
+
+<article></article>
+
+<footer></footer>
 
 </body>
 
