--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
   alt=" Afbeelding van koe"></article>
 
  <nav class="deelkopje_nav">
-  <a href="digitale veiligheid/digitaleveiligheid.html"></a>
+  <a href="digitale veiligheid/digitaleveiligheid.html">Digitale veiligheid</a>
  </nav>
 
  <nav class="deelkopje_nav"></nav>
- 
+
  <nav class="deelkopje_nav"></nav>
 
 </body>
