--- a/digitale veiligheid/digitaleveiligheid.html
+++ b/digitale veiligheid/digitaleveiligheid.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <header></header>
+    <header><h1>Digitale veiligheid</h1></header>
 
     <article id="bigimage"> 
         <img
