--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
   <a href="digitale veiligheid/digitaleveiligheid.html">Digitale veiligheid</a>
  </nav>
 
- <nav class="deelkopje_nav"></nav>
+ <nav class="deelkopje_nav">
+  <a href="">bedrijgingen</a>
+ </nav>
 
  <nav class="deelkopje_nav"></nav>
 
