--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
  </nav>
 
  <nav class="deelkopje_nav">
-  <a href="bedreigingen/bedreigingen.html">bedrijgingen</a>
+  <a href="bedreigingen/bedreigingen.html">bedreigingen</a>
  </nav>
 
  <nav class="deelkopje_nav"></nav>
