--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
  </nav>
 
  <nav class="deelkopje_nav">
-  <a href="bedreigingen/bedreigingen.html">bedreigingen</a>
+  <a href="bedreigingen/bedreigingen.html">bedreigingen(klopt nog niet)</a>
  </nav>
 
- <nav class="deelkopje_nav"></nav>
+ <nav class="deelkopje_nav">
+  <a href=""></a>
+ </nav>
 
  <footer></footer>
 
