--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
  </nav>
 
  <nav class="deelkopje_nav">
-  <a href="bedreigingen/bedreigingen.html">bedreigingen(klopt nog niet)</a>
+  <a href="bedreigingen/bedreigingen.html">bedreigingen(klopt nog niet moet ergens anders)</a>
  </nav>
 
  <nav class="deelkopje_nav">
