--- a/index.html
+++ b/index.html
@@ -47,7 +47,34 @@
  </nav>
 
  <nav class="deelkopje_nav">
-  <a href="bedreigingen/bedreigingen.html">bedreigingen(klopt nog niet moet ergens anders)</a>
+  <a href=""></a>
+ </nav>
+
+ <nav class="deelkopje_nav">
+  <a href=""></a>
+ </nav>
+
+
+ <article class="kop_samenvatting"></article>
+
+ <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+ <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+  <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+ <nav class="deelkopje_nav">
+  <a href="bedreigingen/bedreigingen.html">Bedreidingen</a>
+ </nav>
+
+ <nav class="deelkopje_nav">
+  <a href="">Bedreigingen</a>
  </nav>
 
  <nav class="deelkopje_nav">
