--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
  </nav>
 
  <nav class="deelkopje_nav">
-  <a href="">Bedreigingen</a>
+  <a href=""></a>
  </nav>
 
  <nav class="deelkopje_nav">
