Blokken juiste breedte + inhoudsopgave tekst

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
  <header><h1>Welkom op onze website yayy!!!!</h1></header>
 
- <nav class="inhoudsopgave"></nav>
+ <nav class="inhoudsopgave">
+<h1>Inhoudsopgave</h1>
+ </nav>
 
  <article id="bigimage"> 
   <img
@@ -44,6 +46,90 @@
 
  <nav class="deelkopje_nav">
   <a href="digitale veiligheid/digitaleveiligheid.html">Digitale veiligheid</a>
+ </nav>
+
+ <nav class="deelkopje_nav">
+  <a href=""></a>
+ </nav>
+
+ <nav class="deelkopje_nav">
+  <a href=""></a>
+ </nav>
+
+ <article class="koptitel"></article>
+
+ <article class="kop_samenvatting"></article>
+
+ <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+ <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+  <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+ <nav class="deelkopje_nav">
+  <a href="bedreigingen/bedreigingen.html">Bedreidingen</a>
+ </nav>
+
+ <nav class="deelkopje_nav">
+  <a href=""></a>
+ </nav>
+
+ <nav class="deelkopje_nav">
+  <a href=""></a>
+ </nav>
+
+ <article class="koptitel"></article>
+
+ <article class="kop_samenvatting"></article>
+
+ <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+ <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+  <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+ <nav class="deelkopje_nav">
+  <a href="bedreigingen/bedreigingen.html">Bedreidingen</a>
+ </nav>
+
+ <nav class="deelkopje_nav">
+  <a href=""></a>
+ </nav>
+
+ <nav class="deelkopje_nav">
+  <a href=""></a>
+ </nav>
+
+ <article class="koptitel"></article>
+
+ <article class="kop_samenvatting"></article>
+
+ <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+ <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+  <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+ <nav class="deelkopje_nav">
+  <a href="bedreigingen/bedreigingen.html">Bedreidingen</a>
  </nav>
 
  <nav class="deelkopje_nav">
