effe wat uitproberen

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
  <nav class="inhoudsopgave">
 <h1>Inhoudsopgave</h1>
+<p><a href="#1ofzo">Titelkopje 1</a></p>
  </nav>
 
  <article id="bigimage"> 
@@ -26,11 +27,14 @@
     src="https://photos.demandstudios.com/getty/article/152/213/484171235.jpg"
     alt=" eend"> </article>
 
- <article class="samenvatting_homepage">  </article>
+ <article class="samenvatting_homepage"> <h3 id="1ofzo">Titelkopje 1</h3><p>De standaard Lorem Ipsum passage, in gebruik sinds de 16e eeuw
+  "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." </p>
+</article>
 
- <article class="koptitel"></article>
+ <article class="koptitel"><h1>Pilaren van Digitale Beveiliging en Identiteit</h1></article>
 
- <article class="kop_samenvatting"></article>
+ <article class="kop_samenvatting"><p>De opkomst van digitale technologieën heeft onze samenleving en levensstijl veranderd, resulterend in unieke digitale identiteiten voor individuen. Deze identiteiten omvatten persoonlijke gegevens, verspreid over verschillende platforms zoals sociale media, bankaccounts en schoolwebsites. Digitale beveiliging, cruciaal voor het beschermen van deze gegevens, richt zich op vertrouwelijkheid, integriteit en beschikbaarheid. Criminelen en anderen proberen toegang te krijgen tot deze gegevens voor persoonlijk gewin. Verantwoordelijkheid voor digitale veiligheid rust op alle betrokkenen, van softwareontwikkelaars tot individuele gebruikers die sterke wachtwoorden en ontgrendelingsmethoden moeten hanteren.
+</p></article>
 
  <article class="plaatjes_klein"><img
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
@@ -44,7 +48,9 @@
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
   alt=" Afbeelding van koe"></article>
 
- <nav class="deelkopje_nav">
+ <nav class="deelkopje_nav"><p>Voordat er toegang is tot persoonlijke gegevens, is er een controle nodig om te kijken of de gebruiker wel toegang mag hebben. Dit proces wordt authenticatie genoemd.
+  Sommige deskundigen menen dat er ook een vierde vorm is: de plek waar je bent. Probeer je bijvoorbeeld veel geld over te maken
+  </p>
   <a href="digitale veiligheid/digitaleveiligheid.html">Digitale veiligheid</a>
  </nav>
 
