--- a/index.html
+++ b/index.html
@@ -63,6 +63,34 @@
   <a href=""></a>
  </nav>
  
+ <article class="koptitel"><h1 id="1ofzo">Bedrijgingen</h1></article>
+
+ <article class="kop_samenvatting"><p>
+</p></article>
+
+ <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+ <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+  <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+ <nav class="deelkopje_nav"><p><a href="bedreigingen/bedreigingen.html">Bedrijgingen</a>
+  
+ </nav>
+
+ <nav class="deelkopje_nav">
+  <a href=""></a>
+ </nav>
+
+ <nav class="deelkopje_nav">
+  <a href=""></a>
+ </nav>
  
 
  <footer></footer>
