--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <a href=""></a>
  </nav>
  
- <article class="koptitel"><h1 id="1ofzo">Bedrijgingen</h1></article>
+ <article class="koptitel"><h1 id="">Bedrijgingen</h1></article>
 
  <article class="kop_samenvatting"><p>
 </p></article>
