--- a/index.html
+++ b/index.html
@@ -92,6 +92,92 @@
   <a href=""></a>
  </nav>
  
+ <article class="koptitel"><h1 id="">Aanvallers en verdedigers</h1></article>
+
+ <article class="kop_samenvatting"><p>
+</p></article>
+
+ <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+ <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+  <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+ <nav class="deelkopje_nav"><p><a href="bedreigingen/bedreigingen.html">Aanvallers en verdedigers</a>
+  
+ </nav>
+
+ <nav class="deelkopje_nav">
+  <a href=""></a>
+ </nav>
+
+ <nav class="deelkopje_nav">
+  <a href=""></a>
+ </nav>
+
+ <article class="koptitel"><h1 id="">Maatregelen</h1></article>
+
+ <article class="kop_samenvatting"><p>
+</p></article>
+
+ <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+ <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+  <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+ <nav class="deelkopje_nav"><p><a href="bedreigingen/bedreigingen.html">Maatregelen</a>
+  
+ </nav>
+
+ <nav class="deelkopje_nav">
+  <a href=""></a>
+ </nav>
+
+ <nav class="deelkopje_nav">
+  <a href=""></a>
+ </nav>
+
+ <article class="koptitel"><h1 id="">Verdieping SQL-injecties</h1></article>
+
+ <article class="kop_samenvatting"><p>
+</p></article>
+
+ <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+ <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+  <article class="plaatjes_klein"><img
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  alt=" Afbeelding van koe"></article>
+
+ <nav class="deelkopje_nav"><p><a href="bedreigingen/bedreigingen.html">Verdieping SQL-injecties</a>
+  
+ </nav>
+
+ <nav class="deelkopje_nav">
+  <a href=""></a>
+ </nav>
+
+ <nav class="deelkopje_nav">
+  <a href=""></a>
+ </nav>
 
  <footer></footer>
 
