--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
   alt=" Afbeelding van koe"></article>
 
- <nav class="deelkopje_nav"><p><a href="bedreigingen/bedreigingen.html">Aanvallers en verdedigers</a>
+ <nav class="deelkopje_nav"><p><a href="">Aanvallers en verdedigers</a>
   
  </nav>
 
