--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
   alt=" Afbeelding van koe"></article>
 
- <nav class="deelkopje_nav"><p><a href="">Aanvallers en verdedigers</a>
+ <nav class="deelkopje_nav"><p><a href="aanvallers en verdedigers/aanvallersenverdedigers.html">Aanvallers en verdedigers</a>
   
  </nav>
 
@@ -138,7 +138,7 @@
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
   alt=" Afbeelding van koe"></article>
 
- <nav class="deelkopje_nav"><p><a href="bedreigingen/bedreigingen.html">Maatregelen</a>
+ <nav class="deelkopje_nav"><p><a href="maatregelen/maatregelen.html">Maatregelen</a>
   
  </nav>
 
@@ -167,7 +167,7 @@
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
   alt=" Afbeelding van koe"></article>
 
- <nav class="deelkopje_nav"><p><a href="bedreigingen/bedreigingen.html">Verdieping SQL-injecties</a>
+ <nav class="deelkopje_nav"><p><a href="verdieping sql-injecties/verdiepingsql-injecties.html">Verdieping SQL-injecties</a>
   
  </nav>
 
