--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <a href=""></a>
  </nav>
  
- <article class="koptitel"><h1 id="">Bedrijgingen</h1></article>
+ <article class="koptitel"><h1 id="">Bedreigingen</h1></article>
 
  <article class="kop_samenvatting"><p>
 </p></article>
@@ -80,7 +80,7 @@
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
   alt=" Afbeelding van koe"></article>
 
- <nav class="deelkopje_nav"><p><a href="bedreigingen/bedreigingen.html">Bedrijgingen</a>
+ <nav class="deelkopje_nav"><p><a href="bedreigingen/bedreigingen.html">Bedreigingen</a>
   
  </nav>
 
