--- a/verdieping sql-injecties/verdiepingsql-injecties.html
+++ b/verdieping sql-injecties/verdiepingsql-injecties.html
@@ -2,6 +2,8 @@
 
 <head>
 
+    <title>Verdieping SQL-injecties</title>
+
     <link href="style.css" rel="stylesheet" type="text/css" />
 
 </head>
@@ -9,6 +11,19 @@
 <body>
 
     <header><h1>Verdieping SQL-injecties</h1></header>
+
+    <article id="bigimage"> 
+        <img
+          src="https://photos.demandstudios.com/getty/article/152/213/484171235.jpg"
+          alt=" eend"> </article>
+
+<article></article>
+
+<article></article>
+
+<article></article>
+
+<footer>© 2024 | Gemaakt door Michelle en Mare</footer>
 
 </body>
 
