--- a/aanvallers en verdedigers/aanvallersenverdedigers.html
+++ b/aanvallers en verdedigers/aanvallersenverdedigers.html
@@ -2,13 +2,28 @@
 
 <head>
 
+    <title>Aanvallers en verdedigers</title>
+
     <link href="style.css" rel="stylesheet" type="text/css" />
-    
+
 </head>
 
 <body>
 
     <header><h1>Aanvallers en verdedigers</h1></header>
+
+    <article id="bigimage"> 
+        <img
+          src="https://photos.demandstudios.com/getty/article/152/213/484171235.jpg"
+          alt=" eend"> </article>
+
+<article></article>
+
+<article></article>
+
+<article></article>
+
+<footer>© 2024 | Gemaakt door Michelle en Mare</footer>
 
 </body>
 
