--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
 <h1>Inhoudsopgave</h1>
 <p><a href="#1ofzo">Pilaren van Digitale Beveiliging en Identiteit
   1</a></p>
+
+  <p><a href="#2ofzo">Bedreigingen</a></p>
+
+    <p><a href="#3ofzo">Aanvallers en verdedigers</a></p>
+
+      <p><a href="#4ofzo">Maatregelen</a></p>
+
+        <p><a href="#5ofzo">Verdieping SQL-injecties</a></p>
+
  </nav>
 
  <article id="bigimage"> 
@@ -63,7 +72,7 @@
   <a href=""></a>
  </nav>
  
- <article class="koptitel"><h1 id="">Bedreigingen</h1></article>
+ <article class="koptitel"><h1 id="2ofzo">Bedreigingen</h1></article>
 
  <article class="kop_samenvatting"><p>
 </p></article>
@@ -92,7 +101,7 @@
   <a href=""></a>
  </nav>
  
- <article class="koptitel"><h1 id="">Aanvallers en verdedigers</h1></article>
+ <article class="koptitel"><h1 id="3ofzo">Aanvallers en verdedigers</h1></article>
 
  <article class="kop_samenvatting"><p>
 </p></article>
@@ -121,7 +130,7 @@
   <a href=""></a>
  </nav>
 
- <article class="koptitel"><h1 id="">Maatregelen</h1></article>
+ <article class="koptitel"><h1 id="4ofzo">Maatregelen</h1></article>
 
  <article class="kop_samenvatting"><p>
 </p></article>
@@ -150,7 +159,7 @@
   <a href=""></a>
  </nav>
 
- <article class="koptitel"><h1 id="">Verdieping SQL-injecties</h1></article>
+ <article class="koptitel"><h1 id="5ofzo">Verdieping SQL-injecties</h1></article>
 
  <article class="kop_samenvatting"><p>
 </p></article>
