--- a/index.html
+++ b/index.html
@@ -59,14 +59,16 @@
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
   alt=" Afbeelding van koe"></article>
 
- <nav class="deelkopje_nav"><p><a href="digitale veiligheid/digitaleveiligheid.html">Authenticatie</a><br>Authenticatie
-  Op het internet is het cruciaal dat jouw persoonlijke gegevens veilig zijn. Voordat je toegang krijgt tot belangrijke informatie, zoals je cijfers of persoonlijke gegevens, moeten we zeker weten dat jij het echt bent. Dit proces wordt 'authenticatie' genoemd, dit is het controleren... <a href="https://en.wikipedia.org/wiki/Leptodactylus_fallax">Lees meer</a>
+ <nav class="deelkopje_nav">
+  <p>
+    <a href="digitale veiligheid/zijpaginaAuthenticatie.html">Authenticatie</a><br>Op het internet is het cruciaal dat jouw persoonlijke gegevens veilig zijn. Voordat je toegang krijgt tot belangrijke informatie, zoals je cijfers of persoonlijke gegevens, moeten we zeker weten dat jij het echt bent. Dit proces wordt 'authenticatie' genoemd, dit is het controleren... <a href="digitale veiligheid/zijpaginaAuthenticatie.html">Lees meer</a>
   </p>
-  
  </nav>
 
  <nav class="deelkopje_nav">
-  <a href=""></a>
+  <p>
+    <a href="digitale veiligheid/zijpaginaIntergriteit.html">Intergriteit</a><br>In de digitale wereld is het checken van wie toegang heeft tot wat en of informatie klopt superbelangrijk. Of het nu gaat om schoolcijfers of bestanden delen op je netwerk, het autoriseren en contreren van intergriteit zijn onmisbaar. Met dingen zoals checksums en IBAN-controles...<a href="digitale veiligheid/zijpaginaIntergriteit.html">Lees meer</a>
+  </p>
  </nav>
 
  <nav class="deelkopje_nav">
