--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
   alt=" Afbeelding van koe"></article>
 
- <nav class="deelkopje_nav"><p><a href="maatregelen/maatregelen.html">Maatregelen</a>
+ <nav class="deelkopje_nav"><p><a href="maatregelen/maatregelen.html">Preventie</a>
   
  </nav>
 
