--- a/index.html
+++ b/index.html
@@ -150,7 +150,10 @@
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
   alt=" Afbeelding van koe"></article>
 
- <nav class="deelkopje_nav"><p><a href="maatregelen/maatregelen.html">Preventie</a>
+  <p>
+ <nav class="deelkopje_nav"><p><a href="maatregelen/maatregelen.html">Preventie</a><br>Preventieve beveiligingsmaatregelen zijn maatregelen die worden genomen om problemen te voorkomen. Dat begint bij de hardware veilig te maken en de software up-to-date te houden. Dat betekent bijvoorbeeld voor softwareontwikkelaars dat ze op de hoogte moeten zijn van de manieren waarop je beveiligde software maakt. 
+
+  </p>
   
  </nav>
 
