--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   alt=" Afbeelding van koe"></article>
 
   <p>
- <nav class="deelkopje_nav"><p><a href="maatregelen/maatregelen.html">Preventie</a><br>Preventieve beveiligingsmaatregelen zijn maatregelen die worden genomen om problemen te voorkomen. Dat begint bij de hardware veilig te maken en de software up-to-date te houden. Dat betekent bijvoorbeeld voor softwareontwikkelaars dat ze op de hoogte moeten zijn van de manieren waarop je beveiligde software maakt. 
+ <nav class="deelkopje_nav"><p><a href="maatregelen/maatregelen.html">Preventie</a><br>
 
   </p>
   
