--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <a href=""></a>
  </nav>
 
- <article class="koptitel"><h1 id="4ofzo">Maatregelen</h1></article>
+ <article class="koptitel"><h1 id="4ofzo">Maatregelen</h1><p>Er zijn veel partijen nodig om de veiligheid van ICT-systemen goed te houden: cybersecuritybedrijven, de overheid, softwareontwikkelaars en de gebruikers. Om de veiligheid van een systeem te vergroten, kun je veel maatregelen nemen. Deze maatregelen zijn te verdelen in 4 soorten: preventie, detectie, repressie en correctie. In de onderstaande stukjes wordt uitgelegd wat die maatregelen inhouden.</p></article>
 
  <article class="kop_samenvatting"><p>
 </p></article>
