--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
  <article class="koptitel"><h1 id="4ofzo">Maatregelen</h1></article>
 
- <article class="kop_samenvatting"><p>Er zijn veel partijen nodig om de veiligheid van ICT-systemen goed te houden: cybersecuritybedrijven, de overheid, softwareontwikkelaars en de gebruikers. Om de veiligheid van een systeem te vergroten, kun je veel maatregelen nemen. Deze maatregelen zijn te verdelen in 4 soorten: preventie, detectie, repressie en correctie. In de onderstaande stukjes wordt uitgelegd wat die maatregelen inhouden. U gaat ook wat lezen over wat u zelf kunt doen om uw veiligheid online te vergroten. Hierbij is ook een test te vinden over phishing en of u dat kunt herkennen.
+ <article class="kop_samenvatting"><p>Er zijn veel partijen nodig om de veiligheid van ICT-systemen goed te houden: cybersecuritybedrijven, de overheid, softwareontwikkelaars en de gebruikers. Om de veiligheid van een systeem te vergroten, kunt u veel maatregelen nemen. Deze maatregelen zijn te verdelen in 4 soorten: preventie, detectie, repressie en correctie. In de onderstaande stukjes wordt uitgelegd wat die maatregelen inhouden. U gaat ook wat lezen over wat u zelf kunt doen om uw veiligheid online te vergroten. Hierbij is ook een test te vinden over phishing en of u dat kunt herkennen.
 </p></article>
 
  <article class="plaatjes_klein"><img
