--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
  </nav>
 
  <nav class="deelkopje_nav">
-  <a href=""></a>
+  <a href="">Detectie</a>
  </nav>
 
  <nav class="deelkopje_nav">
-  <a href=""></a>
+  <a href="">Repressie en correctie</a>
  </nav>
 
  <article class="koptitel"><h1 id="5ofzo">Verdieping SQL-injecties</h1></article>
