--- a/index.html
+++ b/index.html
@@ -151,14 +151,14 @@
   alt=" Afbeelding van koe"></article>
 
   <p>
- <nav class="deelkopje_nav"><p><a href="maatregelen/maatregelen.html">Preventie</a><br>Preventieve beveiligingsmaatregelen zijn maatregelen die worden genomen om problemen te voorkomen. Dat begint bij de hardware veilig te maken en de software up-to-date te houden. Dat betekent bijvoorbeeld voor softwareontwikkelaars dat... <a href="maatregelen/maatregelen.html">Lees meer</a>
-
-  </p>
+ <nav class="deelkopje_nav"><p><a href="maatregelen/zijpaginaPreventie.html">Preventie</a><br>Preventieve beveiligingsmaatregelen zijn maatregelen die worden genomen om problemen te voorkomen. Dat begint bij de hardware veilig te maken en de software up-to-date te houden. Dat betekent bijvoorbeeld voor softwareontwikkelaars dat... <a href="maatregelen/maatregelen.html">Lees meer</a>
+  
+</p>
   
  </nav>
 
  <nav class="deelkopje_nav">
-  <a href="">Detectie</a>
+  <a href="maatregelen/zijpaginaDetectie.html">Detectie</a>
  </nav>
 
  <nav class="deelkopje_nav">
