--- a/maatregelen/zijpaginaDetectie.html
+++ b/maatregelen/zijpaginaDetectie.html
@@ -2,7 +2,7 @@
 
 <head>
 
-    <title>Maatregelen</title>
+    <title>Detectie</title>
 
     <link href="style.css" rel="stylesheet" type="text/css" />
 
