--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
  <nav class="deelkopje_nav">
   <p>
-    <a href="digitale veiligheid/zijpaginaIntergriteit.html">Intergriteit</a><br>In de digitale wereld is het checken van wie toegang heeft tot wat en of informatie klopt superbelangrijk. Of het nu gaat om schoolcijfers of bestanden delen op je netwerk, het autoriseren en contreren van intergriteit zijn onmisbaar. Met dingen zoals checksums en IBAN-controles...<a href="digitale veiligheid/zijpaginaIntergriteit.html">Lees meer</a>
+    <a href="digitale veiligheid/zijpaginaIntergriteit.html">Integriteit</a><br>In de digitale wereld is het checken van wie toegang heeft tot wat en of informatie klopt superbelangrijk. Of het nu gaat om schoolcijfers of bestanden delen op je netwerk, het autoriseren en contreren van intergriteit zijn onmisbaar. Met dingen zoals checksums en IBAN-controles...<a href="digitale veiligheid/zijpaginaIntergriteit.html">Lees meer</a>
   </p>
  </nav>
 
