--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
  </nav>
 
  <p>
- <nav class="deelkopje_nav"><a href="maatregelen/zijpaginaDetectie.html">Detectie</a>
+ <nav class="deelkopje_nav">
+  <a href="maatregelen/zijpaginaDetectie.html">Detectie</a>
  </nav>
  </p>
 
