--- a/index.html
+++ b/index.html
@@ -157,10 +157,11 @@
   
  </nav>
 
- <p>
- <nav class="deelkopje_nav">
+ <nav class="deelkopje_nav"><p>
   <a href="maatregelen/zijpaginaDetectie.html">Detectie</a>
+
  </p>
+
  </nav>
 
  <nav class="deelkopje_nav">
