--- a/index.html
+++ b/index.html
@@ -164,8 +164,9 @@
 
  </nav>
 
- <nav class="deelkopje_nav">
+ <nav class="deelkopje_nav"><p>
   <a href="">Repressie en correctie</a>
+  </p>
  </nav>
 
  <article class="koptitel"><h1 id="5ofzo">Verdieping SQL-injecties</h1></article>
