--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
  </nav>
 
  <nav class="deelkopje_nav">
-  <a href=""></a>
+  <p>
+    <a href="digitale veiligheid/zijpaginaIntergriteit.html">Beschikbaarheid</a><br>De beschikbaarheid van data is heel belangrijk, en moet altijd beschikbaar zijn wanneer we ze nodig hebben. Dit betekent dat er voorzorgsmaatregelen moeten worden genomen, zoals het regelmatig updaten van onze computers en het maken van kopieën van belangrijke informatie...<a href="digitale veiligheid/zijpaginaIntergriteit.html">Lees meer</a>
+  </p>
  </nav>
  
  <article class="koptitel"><h1 id="2ofzo">Bedreigingen</h1></article>
