--- a/index.html
+++ b/index.html
@@ -189,15 +189,17 @@
   alt=" Afbeelding van koe"></article>
 
  <nav class="deelkopje_nav"><p><a href="verdieping sql-injecties/verdiepingsql-injecties.html">Verdieping SQL-injecties</a>
-  
+  </p>
  </nav>
 
- <nav class="deelkopje_nav">
+ <nav class="deelkopje_nav"><p>
   <a href=""></a>
+  </p>
  </nav>
 
- <nav class="deelkopje_nav">
+ <nav class="deelkopje_nav"><p>
   <a href=""></a>
+  </p>
  </nav>
 
  <footer>© 2024 | Gemaakt door Michelle en Mare</footer>
