--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
 
  <nav class="deelkopje_nav">
   <p>
-    <a href="digitale veiligheid/zijpaginaAuthenticatie.html">Authenticatie</a><br>Op het internet is het cruciaal dat jouw persoonlijke gegevens veilig zijn. Voordat je toegang krijgt tot belangrijke informatie, zoals je cijfers of persoonlijke gegevens, moeten we zeker weten dat jij het echt bent. Dit proces wordt 'authenticatie' genoemd, dit is het controleren... <a href="digitale veiligheid/zijpaginaAuthenticatie.html">Lees meer</a>
+    <a href="digitale_veiligheid/zijpaginaAuthenticatie.html">Authenticatie</a><br>Op het internet is het cruciaal dat jouw persoonlijke gegevens veilig zijn. Voordat je toegang krijgt tot belangrijke informatie, zoals je cijfers of persoonlijke gegevens, moeten we zeker weten dat jij het echt bent. Dit proces wordt 'authenticatie' genoemd, dit is het controleren... <a href="digitale veiligheid/zijpaginaAuthenticatie.html">Lees meer</a>
   </p>
  </nav>
 
  <nav class="deelkopje_nav">
   <p>
-    <a href="digitale veiligheid/zijpaginaIntergriteit.html">Integriteit</a><br>In de digitale wereld is het checken van wie toegang heeft tot wat en of informatie klopt superbelangrijk. Of het nu gaat om schoolcijfers of bestanden delen op je netwerk, het autoriseren en contreren van intergriteit zijn onmisbaar. Met dingen zoals checksums en IBAN-controles...<a href="digitale veiligheid/zijpaginaIntergriteit.html">Lees meer</a>
+    <a href="digitale_veiligheid/zijpaginaIntergriteit.html">Integriteit</a><br>In de digitale wereld is het checken van wie toegang heeft tot wat en of informatie klopt superbelangrijk. Of het nu gaat om schoolcijfers of bestanden delen op je netwerk, het autoriseren en contreren van intergriteit zijn onmisbaar. Met dingen zoals checksums en IBAN-controles...<a href="digitale veiligheid/zijpaginaIntergriteit.html">Lees meer</a>
   </p>
  </nav>
 
  <nav class="deelkopje_nav">
   <p>
-    <a href="digitale veiligheid/zijpaginaBeschikbaarheid.html">Beschikbaarheid</a><br>De beschikbaarheid van data is heel belangrijk, en moet altijd beschikbaar zijn wanneer we ze nodig hebben. Dit betekent dat er voorzorgsmaatregelen moeten worden genomen, zoals het regelmatig updaten van onze computers en het maken van kopieën van belangrijke informatie...<a href="digitale veiligheid/zijpaginaBeschikbaarheid.html">Lees meer</a>
+    <a href="digitale_veiligheid/zijpaginaBeschikbaarheid.html">Beschikbaarheid</a><br>De beschikbaarheid van data is heel belangrijk, en moet altijd beschikbaar zijn wanneer we ze nodig hebben. Dit betekent dat er voorzorgsmaatregelen moeten worden genomen, zoals het regelmatig updaten van onze computers en het maken van kopieën van belangrijke informatie...<a href="digitale veiligheid/zijpaginaBeschikbaarheid.html">Lees meer</a>
   </p>
  </nav>
  
@@ -123,7 +123,7 @@
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
   alt=" Afbeelding van koe"></article>
 
- <nav class="deelkopje_nav"><p><a href="aanvallers en verdedigers/aanvallersenverdedigers.html">Aanvallers en verdedigers</a>
+ <nav class="deelkopje_nav"><p><a href="aanvallers_en_verdedigers/aanvallersenverdedigers.html">Aanvallers en verdedigers</a>
   
  </nav>
 
@@ -188,7 +188,7 @@
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
   alt=" Afbeelding van koe"></article>
 
- <nav class="deelkopje_nav"><p><a href="verdieping sql-injecties/verdiepingsql-injecties.html">Verdieping SQL-injecties</a>
+ <nav class="deelkopje_nav"><p><a href="verdieping_sql-injecties/verdiepingsql-injecties.html">Verdieping SQL-injecties</a>
   </p>
  </nav>
 
