--- a/index.html
+++ b/index.html
@@ -153,14 +153,15 @@
   alt=" Afbeelding van koe"></article>
 
   <p>
- <nav class="deelkopje_nav"><p><a href="maatregelen/zijpaginaPreventie.html">Preventie</a><br>Preventieve beveiligingsmaatregelen zijn maatregelen die worden genomen om problemen te voorkomen. Dat begint bij de hardware veilig te maken en de software up-to-date te houden. Dat betekent bijvoorbeeld voor softwareontwikkelaars dat... <a href="maatregelen/maatregelen.html">Lees meer</a>
+ <nav class="deelkopje_nav"><p><a href="maatregelen/zijpaginaPreventie.html">Preventie</a><br>Preventieve beveiligingsmaatregelen zijn maatregelen die worden genomen om problemen te voorkomen. Dat begint bij de hardware veilig te maken en de software up-to-date te houden. Dat betekent bijvoorbeeld voor softwareontwikkelaars dat... <a href="maatregelen/zijpaginaPreventie.html">Lees meer</a>
   
 </p>
   
  </nav>
 
  <nav class="deelkopje_nav"><p>
-  <a href="maatregelen/zijpaginaDetectie.html">Detectie</a>
+  <a href="maatregelen/zijpaginaDetectie.html">Detectie</a><br>Software is helaas niet perfect. Er zijn altijd kwetsbaarheden waar misbruik van kan worden gemaakt. Detectie, controle op misbruik, is daarom nodig. Zo wordt bijvoorbeeld bijgehouden hoe vaak er wordt geprobeerd in te loggen onder een bepaalde gebruikersnaam. <a href="maatregelen/zijpaginaDetectie.html">Lees meer</a>
+
 
  </p>
 
