--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
  </nav>
 
  <nav class="deelkopje_nav"><p>
-  <a href="">Repressie en correctie</a>
+  <a href="maatregelen/zijpaginaRepressie_en_correctie">Repressie en correctie</a><br><a href="maatregelen/zijpaginaRepressie_en_correctie">Lees meer</a>
   </p>
  </nav>
 
