--- a/maatregelen/zijpaginaPreventie.html
+++ b/maatregelen/zijpaginaPreventie.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <header><h1>Maatregelen</h1></header>
+    <header><h1>Preventie</h1></header>
 
     <article id="bigimage"> 
         <img
