--- a/maatregelen/zijpaginaDetectie.html
+++ b/maatregelen/zijpaginaDetectie.html
@@ -17,11 +17,18 @@
           src="https://photos.demandstudios.com/getty/article/152/213/484171235.jpg"
           alt=" eend"> </article>
 
-<article></article>
+<article>
+    <p>
+    </p>
+</article>
 
-<article></article>
+<article>
+    <p></p>
+</article>
 
-<article></article>
+<article>
+    <p></p>
+</article>
 
 <footer>© 2024 | Gemaakt door Michelle en Mare</footer>
 
