--- a/aanvallers_en_verdedigers/aanvallersenverdedigers.html
+++ b/aanvallers_en_verdedigers/aanvallersenverdedigers.html
@@ -23,7 +23,7 @@
 
 <article></article>
 
-<footer>© 2024 | Gemaakt door Michelle en Mare</footer>
+<footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
 </body>
 
