--- a/digitale_veiligheid/zijpaginaAuthenticatie.html
+++ b/digitale_veiligheid/zijpaginaAuthenticatie.html
@@ -25,7 +25,7 @@
 
 <article>Controleren wie je bent, bestaat uit verschillende stappen. Het begint bij de identificatie, hierbij moeten we weten wie je bent. Dit kan bijvoorbeeld door het invoeren van een gebruikersnaam en wachtwoord of door je biometrie, zoals bij vingerafdruk- of gezichtsherkenning-wachtwoorden. Daarna komt de verificatie, waarbij er gecontroleerd wordt of je echt bent die je zegt te zijn. Dit gebeurt meestal door te kijken of de gegevens die je hebt ingevuld overeenkomen met de eerder opgeslagen gegevens in een database. Als er meerdere authenticatie methoden worden gebruikt, verhoogt het de veiligheid van je gegevens. Dat zie je bijvoorbeeld bij bankpassen: om te betalen heb je eerst de pas zelf nodig (iets wat je hebt) en je hebt het wachtwoord nodig (iets wat je weet). Het combineren van twee vormen van authenticatie wordt two-factor authentication (2FA) genoemd en dat maakt het moeilijker voor hackers om toegang te krijgen.</article>
 
-<footer>© 2024 | Gemaakt door Michelle en Mare</footer>
+<footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
 </body>
 
