--- a/digitale_veiligheid/zijpaginaIntegriteit.html
+++ b/digitale_veiligheid/zijpaginaIntegriteit.html
@@ -60,7 +60,7 @@
     Het IBAN (International Bank Account Number) heeft een controlegetal, vergelijkbaar met een checksum, om typfouten te voorkomen bij het invoeren van bankrekeningnummers. Wanneer je een IBAN invoert, wordt het gecontroleerd op geldigheid. Zelfs een kleine wijziging in het IBAN-nummer maakt het ongeldig, waardoor fouten bij het overnemen worden voorkomen en gebruikers zeker weten dat het ingevoerde rekeningnummer nauwkeurig is.
     </article>
 
-<footer>© 2024 | Gemaakt door Michelle en Mare</footer>
+<footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
 </body>
 
