--- a/maatregelen/zijpaginaDetectie.html
+++ b/maatregelen/zijpaginaDetectie.html
@@ -30,7 +30,7 @@
     <p></p>
 </article>
 
-<footer>© 2024 | Gemaakt door Michelle en Mare</footer>
+<footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
 </body>
 
