--- a/bedreigingen/bedreigingen.html
+++ b/bedreigingen/bedreigingen.html
@@ -23,7 +23,7 @@
 
 <article></article>
 
-<footer>© 2024 | Gemaakt door Michelle en Mare</footer>
+<footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
 </body>
 
