--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
   </p>
  </nav>
 
- <footer>© 2024 | Gemaakt door Michelle en Mare</footer>
+ <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
 </body>
 
