--- a/maatregelen/zijpaginaRepressie_en_correctie.html
+++ b/maatregelen/zijpaginaRepressie_en_correctie.html
@@ -23,7 +23,7 @@
 
 <article></article>
 
-<footer>© 2024 | Gemaakt door Michelle en Mare</footer>
+<footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
 </body>
 
