--- a/verdieping_sql-injecties/verdiepingsql-injecties.html
+++ b/verdieping_sql-injecties/verdiepingsql-injecties.html
@@ -23,7 +23,7 @@
 
 <article></article>
 
-<footer>© 2024 | Gemaakt door Michelle en Mare</footer>
+<footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
 </body>
 
