--- a/aanvallers_en_verdedigers/aanvallersenverdedigers.html
+++ b/aanvallers_en_verdedigers/aanvallersenverdedigers.html
@@ -4,8 +4,8 @@
 
     <title>Aanvallers en verdedigers</title>
 
-    <link href="style.css" rel="stylesheet" type="text/css" />
-
+    <link href="../style.css" rel="stylesheet" type="text/css" />
+    
 </head>
 
 <body>
