--- a/bedreigingen/bedreigingen.html
+++ b/bedreigingen/bedreigingen.html
@@ -4,7 +4,7 @@
 
     <title>Bedreigingen</title>
 
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="../style.css" rel="stylesheet" type="text/css" />
 
 </head>
 
