--- a/verdieping_sql-injecties/verdiepingsql-injecties.html
+++ b/verdieping_sql-injecties/verdiepingsql-injecties.html
@@ -4,7 +4,7 @@
 
     <title>Verdieping SQL-injecties</title>
 
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="../style.css" rel="stylesheet" type="text/css" />
 
 </head>
 
