--- a/digitale_veiligheid/zijpaginaBeschikbaarheid.html
+++ b/digitale_veiligheid/zijpaginaBeschikbaarheid.html
@@ -13,17 +13,22 @@
 
     <header><h1>Beschikbaarheid</h1></header>
 
-    <article><p>De beschikbaarheid van data is heel belangrijk, en moet altijd beschikbaar zijn wanneer we ze nodig hebben. Dit betekent dat er voorzorgsmaatregelen moeten worden genomen, zoals het regelmatig updaten van onze computers en het maken van kopieën van belangrijke informatie, zodat die niet worden kwijtgeraakt. Ook worden er speciale technieken gebruikt om gegevens veilig te houden, zoals het versleutelen ervan zodat alleen de juiste mensen ze kunnen lezen. Soms kunnen er problemen optreden, zoals aanvallen op websites, die ervoor zorgen dat ze even niet bereikbaar zijn. Het is belangrijk om maatregelen te nemen om deze problemen te voorkomen en ervoor te zorgen dat onze gegevens altijd veilig en beschikbaar zijn wanneer we ze nodig hebben.
+    <article><p>De beschikbaarheid van data is heel belangrijk, en moet altijd beschikbaar zijn wanneer we ze nodig hebben. Dit betekent dat er voorzorgsmaatregelen moeten worden genomen, zoals het regelmatig updaten van onze computers en het maken van kopieën van belangrijke informatie, zodat die niet worden kwijtgeraakt. Experts raden aan om het 3-2-1-systeem voor back-ups te gebruiken,het 3-2-1-back-upsysteem betekent drie kopieën van je gegevens: twee op verschillende opslagmedia en één op een andere locatie. Ook worden er speciale technieken gebruikt om gegevens veilig te houden, zoals het versleutelen ervan zodat alleen de juiste mensen ze kunnen lezen. Soms kunnen er problemen optreden, zoals aanvallen op websites, die ervoor zorgen dat ze even niet bereikbaar zijn. Het is belangrijk om maatregelen te nemen om deze problemen te voorkomen en ervoor te zorgen dat onze gegevens altijd veilig en beschikbaar zijn wanneer we ze nodig hebben.
     </p></article>
 
     <article id="bigimage"> 
         <img
-          src="https://img.volkskrant.nl/0583267f649107676691d558744988fd5b1e8c63/de-wasbeer-rukt-voorzichtig-op-in-nederland-in-duitsland-zijn-er-al-15-miljoen-wat-te-doen.jpeg"
-          alt="afbeelding wasbeer"> </article>
+          src="https://www.treehugger.com/thmb/i61Ch_eU3v0v0fxNBlU2U3aQQsI=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/GettyImages-671757096-6d806b238a244aae8fab8f1e31c802e7.jpg"
+          alt="afbeelding krab"> </article>
 
-<article><p>Stappen in de authenticatie</p></article>
+<article><p>Encryptie en DDoS</p></article>
 
-<article>Controleren wie je bent, bestaat uit verschillende stappen. Het begint bij de identificatie, hierbij moeten we weten wie je bent. Dit kan bijvoorbeeld door het invoeren van een gebruikersnaam en wachtwoord of door je biometrie, zoals bij vingerafdruk- of gezichtsherkenning-wachtwoorden. Daarna komt de verificatie, waarbij er gecontroleerd wordt of je echt bent die je zegt te zijn. Dit gebeurt meestal door te kijken of de gegevens die je hebt ingevuld overeenkomen met de eerder opgeslagen gegevens in een database. Als er meerdere authenticatie methoden worden gebruikt, verhoogt het de veiligheid van je gegevens. Dat zie je bijvoorbeeld bij bankpassen: om te betalen heb je eerst de pas zelf nodig (iets wat je hebt) en je hebt het wachtwoord nodig (iets wat je weet). Het combineren van twee vormen van authenticatie wordt two-factor authentication (2FA) genoemd en dat maakt het moeilijker voor hackers om toegang te krijgen.</article>
+<article>Het opslaan en verzenden van gevoelige informatie zoals wachtwoorden, pincodes en vingerafdrukken brengt risico’s met zich mee. Hackers zouden bijvoorbeeld een database met wachtwoorden kunnen bekijken! Dit kan leiden tot toegang tot persoonlijke gegevens, wat een ernstig probleem is voor gebruikers. Om deze gegevens veilig te houden, kunnen ze versleuteld worden opgeslagen of verzonden. Encryptie husselt de inhoud van bestanden met behulp van een sleutel, waardoor het onmogelijk is om de inhoud te begrijpen zonder de juiste sleutel.
+
+    WhatsApp is een voorbeeld waarbij berichten en oproepen end-to-end versleuteld zijn, waardoor alleen de bedoelde ontvanger ze kan lezen of beluisteren. Vergelijkbaar met encryptie, wordt hashing gebruikt voor het opslaan van wachtwoorden en vingerafdrukken. Hashing husselt het wachtwoord, maar maakt het onmogelijk om terug te keren naar het origineel. Bij inloggen wordt het wachtwoord nogmaals gehasht en vergeleken met de hash in de database om te controleren.
+    
+    Bij DDoS-aanvallen, gericht op het tijdelijk uitschakelen van een service, wordt een overvloed aan verzoeken naar een website gestuurd, waardoor deze kan crashen. Het is technisch niet ingewikkeld om een DDoS-aanval uit te voeren en kan ernstige gevolgen hebben, zoals gevaar voor patiënten in een ziekenhuis of het onbereikbaar worden van een bank. Om DDoS-aanvallen tegen te gaan, worden verschillende methoden gebruikt, zoals het filteren van internetverkeer of het gebruik van gespecialiseerde anti-DDoS-diensten.
+    </article>
 
 <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
