--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
  <nav class="deelkopje_nav">
   <p>
-    <a href="digitale_veiligheid/zijpaginaIntegriteit.html">Integriteit</a><br>In de digitale wereld is het checken van wie toegang heeft tot wat en of informatie klopt superbelangrijk. Of het nu gaat om schoolcijfers of bestanden delen op je netwerk, het autoriseren en contreren van intergriteit zijn onmisbaar. Met dingen zoals checksums en IBAN-controles...<a href="digitale_veiligheid/zijpaginaIntegriteit.html">Lees meer</a>
+    <a href="digitale veiligheid/zijpaginaIntegriteit.html">Integriteit</a><br>In de digitale wereld is het checken van wie toegang heeft tot wat en of informatie klopt superbelangrijk. Of het nu gaat om schoolcijfers of bestanden delen op je netwerk, het autoriseren en contreren van intergriteit zijn onmisbaar. Met dingen zoals checksums en IBAN-controles...<a href="digitale veiligheid/zijpaginaIntegriteit.html">Lees meer</a>
   </p>
  </nav>
 
@@ -94,9 +94,12 @@
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
   alt=" Afbeelding van koe"></article>
 
- <nav class="deelkopje_nav"><p><a href="bedreigingen/bedreigingen.html">Bedreigingen</a>
-  
- </nav>
+  <nav class="deelkopje_nav">
+    <p>
+      <a href="bedreigingen/zijpaginaZwakhedenArchitectuur.html">Zwakheden in de Architectuur</a><br>In het nieuws wordt er vaak gesproken over zwakke plekken in websites of apps. Dat betekent dat er een fout ontdekt is in hoe ze gemaakt zijn en dat gebruikt wordt om problemen te veroorzaken. De zwakheden in de architectuur van ICT-producten kan je meestal verdelen in drie lagen
+      ...<a href="bedreigingen/zijpaginaZwakhedenArchitectuur.html">Lees meer</a>
+    </p>
+   </nav>
 
  <nav class="deelkopje_nav">
   <a href=""></a>
