--- a/bedreigingen/zijpaginaZwakhedenArchitectuur.html
+++ b/bedreigingen/zijpaginaZwakhedenArchitectuur.html
@@ -2,7 +2,7 @@
 
 <head>
 
-    <title>Bedreigingen</title>
+    <title>Zwakheden Architectuur</title>
 
     <link href="../style.css" rel="stylesheet" type="text/css" />
 
