--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
   </p>
  </nav>
 
- <article class="koptitel"><h1 id="5ofzo">Verdieping SQL-injecties</h1></article>
+ <article class="koptitel"><h1 id="5ofzo">SQL-injecties</h1></article>
 
  <article class="kop_samenvatting"><p>
 </p></article>
@@ -192,7 +192,7 @@
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
   alt=" Afbeelding van koe"></article>
 
- <nav class="deelkopje_nav"><p><a href="verdieping_sql-injecties/verdiepingsql-injecties.html">Verdieping SQL-injecties</a>
+ <nav class="deelkopje_nav"><p><a href="SQL-injecties/verdiepingsql-injecties.html">Verdieping SQL-injecties</a>
   </p>
  </nav>
 
