--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
   alt=" Afbeelding van koe"></article>
 
- <nav class="deelkopje_nav"><p><a href="SQL-injecties/verdiepingsql-injecties.html">Verdieping SQL-injecties</a>
+ <nav class="deelkopje_nav"><p><a href="SQL-injecties/verdiepingsql-injecties.html">SQL-injecties</a>
   </p>
  </nav>
 
