--- a/maatregelen/zijpaginaDetectie.html
+++ b/maatregelen/zijpaginaDetectie.html
@@ -17,16 +17,16 @@
           src="https://photos.demandstudios.com/getty/article/152/213/484171235.jpg"
           alt=" eend"> </article>
 
-<article>
-    <p>
+<article class="kop_samenvatting">
+    <p>hallo
     </p>
 </article>
 
-<article>
+<article class="koptitel">
     <p></p>
 </article>
 
-<article>
+<article class="kop_samenvatting">
     <p></p>
 </article>
 
