--- a/maatregelen/zijpaginaRepressie_en_correctie.html
+++ b/maatregelen/zijpaginaRepressie_en_correctie.html
@@ -17,11 +17,18 @@
           src="https://photos.demandstudios.com/getty/article/152/213/484171235.jpg"
           alt=" eend"> </article>
 
-<article></article>
+<article class="kop_samenvatting">
+    <p>hallo
+    </p>
+</article>
 
-<article></article>
+<article class="koptitel">
+    <p></p>
+</article>
 
-<article></article>
+<article class="kop_samenvatting">
+    <p></p>
+</article>
 
 <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
