--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
 
+  <div id="wrapper">
  <header><h1>Welkom op onze website yayy!!!!</h1></header>
 
  <nav class="inhoudsopgave">
@@ -208,6 +209,7 @@
 
  <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
+</div>
 </body>
 
 </html>
